package model;

import java.util.ArrayList;

public interface AfficheIndiceStrategy
{
    ArrayList<String> afficherIndice(Indice[] indices);
}
