package model;

import javax.swing.*;
import java.awt.*;

public interface ButtonObserveur
{
    void updateButtons(JButton button, Color color);
}